Issue #260 fixed logo alignment

--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -397,7 +397,8 @@ header.affix {
       line-height: 76px;
       color: @odiGrey;
       margin-bottom: 22px;
-      margin-top: 100px;
+      margin-top: 35px;
+
     }
 
     h2 {
@@ -405,6 +406,7 @@ header.affix {
       line-height: 40px;
       margin-bottom: 40px;
       color: @odiGrey;
+      padding-left: 3px;
       
       strong {
          color: @odiGreyDark;
